--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Générateur de Case Halloween</h1>
+        <h1>Générateur Touché Coulé Surpraïse</h1>
         <div id="result">-</div>
         <button onclick="generateCase()">Invoquer une case</button>
         <div id="history"></div>
