--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #1a1a1a;
+            background-image: url('https://zupimages.net/up/24/39/a699.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             color: #ff6600;
-            background-image: url('https://www.transparenttextures.com/patterns/black-thread-light.png');
         }
         .container {
             text-align: center;
@@ -56,7 +58,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Générateur Touché Coulé Surpraïse</h1>
+        <h1>Générateur de Case Halloween</h1>
         <div id="result">-</div>
         <button onclick="generateCase()">Invoquer une case</button>
         <div id="history"></div>
