--- a/index.html
+++ b/index.html
@@ -5,13 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Générateur de Case Halloween - Double Palette</title>
     <style>
-        /* ... (le reste du style reste inchangé) ... */
+        body {
+            font-family: 'Creepster', cursive;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            background-image: url('https://zupimages.net/up/24/39/a699.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            color: #ff6600;
+        }
+        .container {
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(255, 102, 0, 0.5);
+            max-width: 800px;
+            width: 90%;
+        }
+        h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px #000000;
+        }
+        #result {
+            font-size: 72px;
+            margin: 20px 0;
+            text-shadow: 0 0 10px #ff6600;
+        }
+        button {
+            font-size: 18px;
+            padding: 10px 20px;
+            cursor: pointer;
+            background-color: #ff6600;
+            color: #1a1a1a;
+            border: none;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+        }
+        button:hover {
+            background-color: #ff8533;
+            transform: scale(1.05);
+        }
         #challenge1, #challenge2 {
             margin-top: 20px;
             font-size: 18px;
             background-color: rgba(255, 102, 0, 0.2);
             padding: 10px;
             border-radius: 5px;
+            text-align: left;
+        }
+        #history, #remaining {
+            margin-top: 20px;
+            font-size: 16px;
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
@@ -34,11 +84,39 @@
         let history = [];
 
         const challenges = [
-            // ... (liste des défis inchangée) ...
+            "Fais un défilé de mode exagéré en utilisant un objet de la pièce comme accessoire principal.",
+            "Fais ta meilleure imitation d'un animal en chaleur pendant 10 secondes.",
+            "Fais un compliment exagéré à chaque personne dans la pièce en moins de 30 secondes.",
+            "Avec la personne à ta gauche, faites un concours de grimaces. Les autres votent pour le gagnant.",
+            "Fais semblant d'avoir un orgasme tout en lisant un paragraphe d'un livre choisi au hasard.",
+            "Essaie de faire rire la personne la plus sérieuse du groupe en 30 secondes, sans la toucher ni parler.",
+            "Invente un secret scandaleux sur la personne en face de toi et raconte-le comme si tu étais un présentateur de journal télévisé.",
+            "Mime une scène de ta vie quotidienne comme si tu étais dans un film muet des années 20, avec des gestes exagérés et des expressions faciales over-the-top.",
+            "Fais une pose de bodybuilder ridicule, les autres choisissent le gagnant.",
+            "Fais ton cri d'orgasme le plus théâtral. Les autres votent pour le plus convaincant.",
+            "Échange un vêtement avec la personne à ta droite pendant 2 tours.",
+            "Fais un massage de 30 secondes à la personne à ta gauche.",
+            "Improvise une pub pour un sextoy imaginaire en 20 secondes.",
+            "Fais ta meilleure duckface et prends un selfie.",
+            "Fais un concours de regard séducteur avec la personne en face de toi. Le premier qui rit a perdu."
         ];
 
         const questions = [
-            // ... (liste des questions inchangée) ...
+            "Si tu devais échanger ta garde-robe avec quelqu'un dans la pièce, qui choisirais-tu et pourquoi ?",
+            "Quelle est la partie du corps la plus attirante de la personne à ta droite ?",
+            "Si tu devais être coincé dans un ascenseur pendant 24h avec deux personnes ici, qui choisirais-tu ?",
+            "Imite la façon de marcher de quelqu'un dans la pièce. Les autres doivent deviner qui c'est.",
+            "Si tu devais écrire une chanson d'amour sur quelqu'un ici, qui serait le sujet ?",
+            "Quel secret penses-tu que la personne en face de toi cache ?",
+            "Si tu devais créer un parfum inspiré par quelqu'un dans la pièce, quelle serait son odeur ?",
+            "Quelle célébrité la personne à ta gauche te rappelle-t-elle ?",
+            "Si tu devais échanger ta personnalité avec quelqu'un ici pour une journée, qui choisirais-tu ?",
+            "Quel superhéros serait la personne deux places à ta droite et pourquoi ?",
+            "Si tu devais organiser un rendez-vous romantique pour deux personnes dans cette pièce, qui choisirais-tu et que planifierais-tu ?",
+            "Quelle est la chose la plus embarrassante que tu penses que la personne en diagonale de toi ait faite récemment ?",
+            "Si tu devais être le assistant personnel de quelqu'un ici pendant une semaine, qui choisirais-tu ?",
+            "Quel trait de personnalité admires-tu le plus chez la personne la plus âgée du groupe ?",
+            "Si tu devais former un groupe de musique avec trois personnes ici, qui choisirais-tu et quels instruments joueraient-ils ?"
         ];
 
         function initializeAvailableCases() {
