--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Générateur de Case Halloween - Double Palette</title>
+    <title>CASE DU TCS</title>
     <style>
         body {
             font-family: 'Creepster', cursive;
@@ -68,7 +68,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Générateur de Case Halloween</h1>
+        <h1>Case du TCR : </h1>
         <div id="result">-</div>
         <button onclick="generateCase()">Invoquer une case</button>
         <div id="challenge1"></div>
