--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         #result {
             font-size: 72px;
             margin: 20px 0;
-            text-shadow: 0 0 10px #ff6600;
+            text-shadow: 0 0 10px #fff3f1;
         }
         button {
             font-size: 18px;
