--- a/index.html
+++ b/index.html
@@ -7,69 +7,103 @@
     <style>
         body {
             font-family: 'Creepster', cursive;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
             margin: 0;
+            padding: 0;
             background-image: url('https://zupimages.net/up/24/39/a699.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             color: #ff6600;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .container {
-            text-align: center;
-            background-color: rgba(0, 0, 0, 0.7);
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(255, 102, 0, 0.5);
-            max-width: 800px;
-            width: 90%;
+            background-color: rgba(0, 0, 0, 0.7);
         }
         h1 {
-            font-size: 36px;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px #000000;
+            font-size: 72px;
+            margin-bottom: 30px;
+            text-shadow: 4px 4px 8px #000000;
         }
         #result {
-            font-size: 72px;
-            margin: 20px 0;
-            text-shadow: 0 0 10px #ff6600;
-            height: 100px;
+            font-size: 120px;
+            margin: 30px 0;
+            text-shadow: 0 0 20px #ff6600;
+            height: 150px;
         }
-        button {
-            font-size: 18px;
-            padding: 10px 20px;
+        #generateButton {
+            font-size: 36px;
+            padding: 20px 40px;
             cursor: pointer;
             background-color: #ff6600;
             color: #1a1a1a;
             border: none;
-            border-radius: 5px;
+            border-radius: 10px;
             transition: all 0.3s ease;
+            margin-bottom: 30px;
         }
-        button:hover {
+        #generateButton:hover {
             background-color: #ff8533;
             transform: scale(1.05);
         }
-        button:disabled {
+        #generateButton:disabled {
             background-color: #cccccc;
             cursor: not-allowed;
         }
-        #challenge1, #challenge2 {
-            margin-top: 20px;
-            font-size: 18px;
+        .teams-container {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+        }
+        .team {
+            width: 45%;
             background-color: rgba(255, 102, 0, 0.2);
-            padding: 10px;
-            border-radius: 5px;
+            padding: 20px;
+            border-radius: 10px;
             text-align: left;
         }
+        .team h3 {
+            font-size: 48px;
+            margin-bottom: 20px;
+        }
+        .team p {
+            font-size: 36px;
+            line-height: 1.4;
+        }
         #history, #remaining {
-            margin-top: 20px;
-            font-size: 16px;
+            font-size: 24px;
+            margin-top: 30px;
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <h1>Générateur de Case Halloween</h1>
+        <div id="result">-</div>
+        <button onclick="startGeneration()" id="generateButton">Invoquer une case</button>
+        <div class="teams-container">
+            <div class="team" id="challenge1">
+                <h3>Équipe 1</h3>
+                <p></p>
+            </div>
+            <div class="team" id="challenge2">
+                <h3>Équipe 2</h3>
+                <p></p>
+            </div>
+        </div>
+        <div id="history"></div>
+        <div id="remaining"></div>
+    </div>
+
+    <audio id="invocationSound" src="https://lasonotheque.org/UPLOAD/mp3/2046.mp3"></audio>
 </head>
 <body>
     <div class="container">
@@ -164,8 +198,8 @@ function shuffleDisplay() {
         function generateCase() {
             if (availableCases.length === 0) {
                 document.getElementById('result').innerText = "Toutes les cases ont été utilisées!";
-                document.getElementById('challenge1').innerText = "";
-                document.getElementById('challenge2').innerText = "";
+        document.querySelector('#challenge1 p').innerHTML = challengeOrQuestion1;
+        document.querySelector('#challenge2 p').innerHTML = challengeOrQuestion2;
                 isGenerating = false;
                 document.getElementById('generateButton').disabled = false;
                 return;
