--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Générateur de Case Halloween - Double Palette</title>
     <style>
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
+        }
+        @keyframes glow {
+            0% { text-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600; }
+            50% { text-shadow: 0 0 20px #ff6600, 0 0 30px #ff6600; }
+            100% { text-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600; }
+        }
         body {
             font-family: 'Creepster', cursive;
             margin: 0;
@@ -31,12 +45,14 @@
             font-size: 72px;
             margin-bottom: 30px;
             text-shadow: 4px 4px 8px #000000;
+            animation: glow 2s ease-in-out infinite;
         }
         #result {
             font-size: 120px;
             margin: 30px 0;
             text-shadow: 0 0 20px #ff6600;
             height: 150px;
+            animation: pulse 1s ease-in-out infinite;
         }
         #generateButton {
             font-size: 36px;
@@ -68,13 +84,14 @@
             padding: 20px;
             border-radius: 10px;
             text-align: left;
+            animation: fadeIn 1s ease-out;
         }
         .team h3 {
             font-size: 48px;
             margin-bottom: 20px;
         }
         .team p {
-            font-size: 42px;
+            font-size: 48px;
             line-height: 1.4;
             color: white;
         }
@@ -106,7 +123,7 @@
 
     <audio id="invocationSound" src="https://lasonotheque.org/UPLOAD/mp3/2046.mp3"></audio>
 
-    <script>
+  <script>
         const letters = ['A', 'B', 'C'];
         const numbers = Array.from({length: 20}, (_, i) => i + 1);
         let availableCases = [];
