--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Générateur de Case Halloween - Double Palette</title>
     <style>
+         .teams-container {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+            align-items: center;
+        }
+        .team {
+            width: 40%;
+            background-color: rgba(255, 102, 0, 0.2);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: left;
+            animation: fadeIn 1s ease-out;
+        }
+        #grim-reaper {
+            width: 150px;
+            height: auto;
+            animation: float 3s ease-in-out infinite;
+        }
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+            100% { transform: translateY(0px); }
+        }
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
@@ -142,6 +166,7 @@
                 <button onclick="revealChallenge(1)" class="reveal-button hidden" id="revealButton1">Découvrir</button>
                 <p class="hidden"></p>
             </div>
+            <img id="grim-reaper" src="https://i.postimg.cc/NF27T4tk/Pngtree-horror-grim-reaper-halloween-theme-5471050.png" alt="Grim Reaper">
             <div class="team" id="challenge2">
                 <h3>Équipe 2</h3>
                 <button onclick="revealChallenge(2)" class="reveal-button hidden" id="revealButton2">Découvrir</button>
