--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         font-family: 'Creepster', cursive;
         margin: 0;
         padding: 0;
-        background-image: url('https://zupimages.net/up/24/39/a699.png');
+    background-color: var(--bg);
+        #background-image: url('https://zupimages.net/up/24/39/a699.png');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
