--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 <body>
     <div id="ghost"></div>
     <div class="container">
+            <div class="spider">
+        <div class="spiderweb"></div>
+        <div class="body">
+            <div class="eye left"></div>
+            <div class="eye right"></div>
+        </div>
+        <div class="legs left">
+            <div class="leg"></div>
+            <div class="leg"></div>
+            <div class="leg"></div>
+        </div>
+        <div class="legs right">
+            <div class="leg"></div>
+            <div class="leg"></div>
+            <div class="leg"></div>
+        </div>
+    </div>
         <div class="halloween-title">
             <span id="I">H</span>
             <span id="T">A</span>
@@ -40,83 +57,6 @@
         <div id="remaining"></div>
     </div>
 
-    <div class='spider_0'>
-      <div class='eye left'></div>
-      <div class='eye right'></div>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-    </div>
-    <div class='spider_1'>
-      <div class='eye left'></div>
-      <div class='eye right'></div>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-    </div>
-    <div class='spider_2'>
-      <div class='eye left'></div>
-      <div class='eye right'></div>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-    </div>
-    <div class='spider_3'>
-      <div class='eye left'></div>
-      <div class='eye right'></div>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-    </div>
-    <div class='spider_4'>
-      <div class='eye left'></div>
-      <div class='eye right'></div>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-    </div>
-    <div class='spider_5'>
-      <div class='eye left'></div>
-      <div class='eye right'></div>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg left'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-      <span class='leg right'></span>
-    </div>
-    <h1>
-      Happy Halloween!
-    </h1>
-    <img class='web-right' src='http://www.scandiafun.com/images/spiderweb-corner-right.png'>
-    <img class='web-left' src='http://www.scandiafun.com/images/spiderweb-corner-right.png'>
 
     <audio id="invocationSound" src="https://lasonotheque.org/UPLOAD/mp3/2046.mp3"></audio>
 
