--- a/index.html
+++ b/index.html
@@ -10,23 +10,6 @@
 <body>
     <div id="ghost"></div>
     <div class="container">
-            <div class="spider">
-        <div class="spiderweb"></div>
-        <div class="body">
-            <div class="eye left"></div>
-            <div class="eye right"></div>
-        </div>
-        <div class="legs left">
-            <div class="leg"></div>
-            <div class="leg"></div>
-            <div class="leg"></div>
-        </div>
-        <div class="legs right">
-            <div class="leg"></div>
-            <div class="leg"></div>
-            <div class="leg"></div>
-        </div>
-    </div>
         <div class="halloween-title">
             <span id="I">H</span>
             <span id="T">A</span>
@@ -57,9 +40,4 @@
         <div id="remaining"></div>
     </div>
 
-
-    <audio id="invocationSound" src="https://lasonotheque.org/UPLOAD/mp3/2046.mp3"></audio>
-
-    <script src="script.js"></script>
-</body>
-</html>
+    <div class="
