--- a/index.html
+++ b/index.html
@@ -39,5 +39,29 @@
         <div id="history"></div>
         <div id="remaining"></div>
     </div>
+</div>
 
-    <div class="
+    <div class="spider">
+        <div class="spiderweb"></div>
+        <div class="body">
+            <div class="eye left"></div>
+            <div class="eye right"></div>
+        </div>
+        <div class="legs left">
+            <div class="leg"></div>
+            <div class="leg"></div>
+            <div class="leg"></div>
+        </div>
+        <div class="legs right">
+            <div class="leg"></div>
+            <div class="leg"></div>
+            <div class="leg"></div>
+        </div>
+    </div>
+    <!-- Répétez ce bloc 4 fois de plus pour avoir 5 araignées au total -->
+
+    <audio id="invocationSound" src="https://lasonotheque.org/UPLOAD/mp3/2046.mp3"></audio>
+
+    <script src="script.js"></script>
+</body>
+</html>
