--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Générateur de Case Halloween - Double Palette</title>
+    <title>TCR 2024</title>
 <style>
     @keyframes fadeIn {
         from { opacity: 0; }
@@ -151,7 +151,7 @@
 <body>
     <div id="ghost"></div>
     <div class="container">
-        <h1>Générateur de Case Halloween</h1>
+        <h1>Welcome au T.C.S.</h1>
         <div id="result">-</div>
         <button onclick="startGeneration()" id="generateButton">Invoquer une case</button>
         <div class="teams-container">
