--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <body>
     <div id="ghost"></div>
     <div class="container">
-        <h1>Welcome au T.C.S.</h1>
+        <h1>Bienvenue au T.C.S.</h1>
         <div id="result">-</div>
         <button onclick="startGeneration()" id="generateButton">Invoquer une case</button>
         <div class="teams-container">
