--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TCR 2024</title>
+    <title>T.C.S. 2024</title>
 <style>
     @keyframes fadeIn {
         from { opacity: 0; }
