--- a/index.html
+++ b/index.html
@@ -493,6 +493,8 @@ $n: 6;
   <span class='leg right'></span>
   <span class='leg right'></span>
 </div>
+	<img class='web-right' src='http://www.scandiafun.com/images/spiderweb-corner-right.png'>
+<img class='web-left' src='http://www.scandiafun.com/images/spiderweb-corner-right.png'>
     <div id="ghost"></div>
     <div class="container">
         <h1>Bienvenue au T.C.S.</h1>
