--- a/index.html
+++ b/index.html
@@ -4,149 +4,134 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T.C.S. 2024</title>
-<style>
-    
-    @keyframes fadeIn {
-        from { opacity: 0; }
-        to { opacity: 1; }
-    }
-    @keyframes pulse {
-        0% { transform: scale(1); }
-        50% { transform: scale(1.05); }
-        100% { transform: scale(1); }
-    }
-    @keyframes glow {
-        0% { text-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600; }
-        50% { text-shadow: 0 0 20px #ff6600, 0 0 30px #ff6600; }
-        100% { text-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600; }
-    }
-    @keyframes float {
-        0% { transform: translateY(0px); }
-        50% { transform: translateY(-10px); }
-        100% { transform: translateY(0px); }
-    }
-    body {
-        font-family: 'Creepster', cursive;
-        margin: 0;
-        padding: 0;
-        background-image: url('https://zupimages.net/up/24/39/a699.png');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        color: #ff6600;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-    }
-    .container {
-        flex-grow: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 20px;
-        background-color: rgba(0, 0, 0, 0.7);
-    }
-    h1 {
-        font-size: 72px;
-        margin-bottom: 30px;
-        text-shadow: 4px 4px 8px #000000;
-        animation: glow 2s ease-in-out infinite;
-    }
-    #result {
-        font-size: 120px;
-        margin: 30px 0;
-        text-shadow: 0 0 20px #ff6600;
-        height: 150px;
-        animation: pulse 1s ease-in-out infinite;
-    }
-    #generateButton {
-        font-size: 36px;
-        padding: 20px 40px;
-        cursor: pointer;
-        background-color: #ff6600;
-        color: #1a1a1a;
-        border: none;
-        border-radius: 10px;
-        transition: all 0.3s ease;
-        margin-bottom: 30px;
-    }
-    #generateButton:hover {
-        background-color: #ff8533;
-        transform: scale(1.05);
-    }
-    #generateButton:disabled {
-        background-color: #cccccc;
-        cursor: not-allowed;
-    }
-    .teams-container {
-        display: flex;
-        width: 100%;
-        justify-content: space-around;
-        align-items: center;
-        margin-top: 30px;
-    }
-    .team {
-        width: 35%;
-        background-color: rgba(255, 102, 0, 0.2);
-        padding: 20px;
-        border-radius: 10px;
-        text-align: left;
-        animation: fadeIn 1s ease-out;
-        min-height: 400px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-    .team h3 {
-        font-size: 48px;
-        margin-bottom: 20px;
-    }
-    .team p {
-        font-size: 36px;
-        line-height: 1.4;
-        color: white;
-        flex-grow: 1;
-    }
-    #history, #remaining {
-        font-size: 24px;
-        margin-top: 30px;
-    }
-    #ghost {
-        position: fixed;
-        width: 100px;
-        height: 100px;
-        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M50 10 C25 10 10 30 10 50 L10 90 L30 70 L40 90 L50 70 L60 90 L70 70 L90 90 L90 50 C90 30 75 10 50 10 Z" fill="white"/><circle cx="35" cy="40" r="5" fill="black"/><circle cx="65" cy="40" r="5" fill="black"/></svg>');
-        background-size: contain;
-        background-repeat: no-repeat;
-        z-index: 1000;
-        transition: all 5s ease-in-out;
-    }
-    #grim-reaper {
-        width: 250px;
-        height: auto;
-        animation: float 3s ease-in-out infinite;
-    }
-    .reveal-button {
-        font-size: 24px;
-        padding: 10px 20px;
-        cursor: pointer;
-        background-color: #ff6600;
-        color: #1a1a1a;
-        border: none;
-        border-radius: 5px;
-        transition: all 0.3s ease;
-        margin-top: 10px;
-        align-self: flex-start;
-    }
-    .reveal-button:hover {
-        background-color: #ff8533;
-        transform: scale(1.05);
-    }
-    .hidden {
-        display: none;
-    }
-</style>
+    <style>
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
+        }
+        @keyframes glow {
+            0% { text-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600; }
+            50% { text-shadow: 0 0 20px #ff6600, 0 0 30px #ff6600; }
+            100% { text-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600; }
+        }
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+            100% { transform: translateY(0px); }
+        }
+        body {
+            font-family: 'Creepster', cursive;
+            margin: 0;
+            padding: 0;
+            background-image: url('https://zupimages.net/up/24/39/a699.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            color: #ff6600;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        .container {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+        h1 {
+            font-size: 72px;
+            margin-bottom: 30px;
+            text-shadow: 4px 4px 8px #000000;
+            animation: glow 2s ease-in-out infinite;
+        }
+        #result {
+            font-size: 120px;
+            margin: 30px 0;
+            text-shadow: 0 0 20px #ff6600;
+            height: 150px;
+            animation: pulse 1s ease-in-out infinite;
+        }
+        .teams-container {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+            align-items: center;
+            margin-top: 30px;
+        }
+        .team {
+            width: 35%;
+            background-color: rgba(255, 102, 0, 0.2);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: left;
+            animation: fadeIn 1s ease-out;
+            min-height: 400px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        .team h3 {
+            font-size: 48px;
+            margin-bottom: 20px;
+        }
+        .team p {
+            font-size: 36px;
+            line-height: 1.4;
+            color: white;
+            flex-grow: 1;
+        }
+        #history, #remaining {
+            font-size: 24px;
+            margin-top: 30px;
+        }
+        #ghost {
+            position: fixed;
+            width: 100px;
+            height: 100px;
+            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M50 10 C25 10 10 30 10 50 L10 90 L30 70 L40 90 L50 70 L60 90 L70 70 L90 90 L90 50 C90 30 75 10 50 10 Z" fill="white"/><circle cx="35" cy="40" r="5" fill="black"/><circle cx="65" cy="40" r="5" fill="black"/></svg>');
+            background-size: contain;
+            background-repeat: no-repeat;
+            z-index: 1000;
+            transition: all 5s ease-in-out;
+        }
+        #grim-reaper {
+            width: 250px;
+            height: auto;
+            animation: float 3s ease-in-out infinite;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+        #grim-reaper:hover {
+            transform: scale(1.05);
+        }
+        .reveal-button {
+            font-size: 24px;
+            padding: 10px 20px;
+            cursor: pointer;
+            background-color: #ff6600;
+            color: #1a1a1a;
+            border: none;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+            margin-top: 10px;
+            align-self: flex-start;
+        }
+        .reveal-button:hover {
+            background-color: #ff8533;
+            transform: scale(1.05);
+        }
+        .hidden {
+            display: none;
+        }
+    </style>
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -154,14 +139,13 @@
     <div class="container">
         <h1>Bienvenue au T.C.S.</h1>
         <div id="result">-</div>
-        <button onclick="startGeneration()" id="generateButton">Invoquer une case</button>
         <div class="teams-container">
             <div class="team" id="challenge1">
                 <h3>Équipe 1</h3>
                 <p class="hidden"></p>
                 <button onclick="revealChallenge(1)" class="reveal-button hidden" id="revealButton1">Découvrir</button>
             </div>
-            <img id="grim-reaper" src="https://i.postimg.cc/NF27T4tk/Pngtree-horror-grim-reaper-halloween-theme-5471050.png" alt="Grim Reaper">
+            <img id="grim-reaper" src="https://i.postimg.cc/NF27T4tk/Pngtree-horror-grim-reaper-halloween-theme-5471050.png" alt="Grim Reaper" onclick="startGeneration()">
             <div class="team" id="challenge2">
                 <h3>Équipe 2</h3>
                 <p class="hidden"></p>
@@ -219,7 +203,7 @@
         function startGeneration() {
             if (isGenerating) return;
             isGenerating = true;
-            document.getElementById('generateButton').disabled = true;
+            document.getElementById('grim-reaper').style.pointerEvents = 'none';
             document.getElementById('invocationSound').play();
             shuffleDisplay();
         }
@@ -276,7 +260,7 @@
             updateRemaining();
 
             isGenerating = false;
-            document.getElementById('generateButton').disabled = false;
+            document.getElementById('grim-reaper').style.pointerEvents = 'auto';
         }
 
         function showRevealButtons() {
