--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             font-family: 'Creepster', cursive;
             margin: 0;
             padding: 0;
-            background-image: url('https://zupimages.net/up/24/39/a699.png');
+            background-image: url('https://cdn.midjourney.com/e565ccde-30a4-4902-925a-f9b1e37121f3/0_0.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
