--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
             flex-direction: column;
             justify-content: space-between;
            .team h3 {
-            font-size: 50px;
-            margin-bottom: 15px;
+    font-size: 48px;
+    margin-bottom: 20px;
+    color: white;
         }
 
         .team p {
-            font-size: 36px;
-            line-height: 1.3;
+            font-size: 32px;
+            line-height: 1.4;
             color: white;
             flex-grow: 1;
         }
@@ -103,7 +104,7 @@
             transition: all 5s ease-in-out;
         }
         #grim-reaper {
-            width: 400px;
+            width: 300px;
             height: auto;
             animation: float 3s ease-in-out infinite;
             cursor: pointer;
@@ -118,7 +119,7 @@
             padding: 10px 20px;
             cursor: pointer;
             background-color: #ff6600;
-            color: #1a1a1a;
+            color: white;
             border: none;
             border-radius: 5px;
             transition: all 0.3s ease;
