--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+        background-opacity: 0.6;
         color: #ff6600;
         display: flex;
         flex-direction: column;
