--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T.C.S. 2024</title>
+    <title>Les palettes du diable</title>
 <style>
     
     @keyframes fadeIn {
@@ -184,7 +184,7 @@
 <body>
     <div id="ghost"></div>
     <div class="container">
-        <h1>Bienvenue au T.C.S.</h1>
+        <h1>Les palettes du diable</h1>
         <div id="result">-</div>
         <div class="teams-container">
             <div class="team" id="challenge1">
