--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="grim-reaper-container" onclick="startGeneration()">
                 <img id="grim-reaper" src="https://image.noelshack.com/fichiers/2024/42/3/1729102697-2o67-trz2-230518-removebg-preview.png" alt="Grim Reaper">
                 <div class="grim-reaper-text">Invoquer une case</div>
+                <button id="nextDuelButton" class="hidden">Duel Suivant</button>
             </div>
             <div class="team" id="challenge2">
                 <h3>Équipe 2</h3>
